change path to js folder to be relative as github publishes project under 'life' URL path

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
