--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,23 @@
             overflow: hidden;
         }
         /* make canvas fill the whole screen */
-        html, body, #renderCanvas {
+        html, body, #___renderCanvas {
             height: 100%;
             width: 100%;
         }
     </style>
 </head>
 <body>
-    <canvas id="renderCanvas"></canvas>
+    <canvas id="renderCanvas" width="640px" height="480px"></canvas>
     <script src="js/main.js"></script>
+
+    <ul>
+        <li>
+            <a href="details.md">Details Markdown</a>
+        </li>
+        <li>
+            <a href="details.html">Details HTML</a>
+        </li>   
+    </ul>
 </body>
 </html>
