moved md sources to separate directory

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,8 @@
     <canvas id="renderCanvas" width="640px" height="480px"></canvas>
     <script src="js/main.js"></script>
 
-    <ul>
-        <li>
-            <a href="details.md">Details Markdown</a>
-        </li>
-        <li>
-            <a href="details.html">Details HTML</a>
-        </li>   
-    </ul>
+    <div>
+        <a href="details.html">More Details</a>
+    </div>
 </body>
 </html>
