--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="js/main.js"></script>
 
     <div>
-        <a href="details.html">More Details</a>
+        <a href="pages/details.html">Project Details</a>
     </div>
 </body>
 </html>
