working version with some well known sample  patterns

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             overflow: hidden;
         }
         /* make canvas fill the whole screen */
-        html, body, #___renderCanvas {
+        html, body, #renderCanvas {
             height: 100%;
             width: 100%;
         }
@@ -21,9 +21,5 @@
 <body>
     <canvas id="renderCanvas" width="640px" height="480px"></canvas>
     <script src="js/main.js"></script>
-
-    <div>
-        <a href="details.html">More Details</a>
-    </div>
 </body>
 </html>
